--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
       <header>
         <h1 class="header">Matthew Shepard</h1>
         <p class="header"></p>
-
-
-
         <ul>
           <li><a class="buttons github" href="https://github.com/Geekner">GitHub Profile</a></li>
         </ul>
@@ -36,7 +33,7 @@
 <a name="projects" class="anchor" href="#projects"><span class="octicon octicon-link"></span></a>Projects</h2>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
